objects/ssot__ContentDocumentRelationship__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Content Document Relationship Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedItemId__c</fullName>
        <label>Related Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325739302_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentRelationship_CreatedB_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContentDocumentRelationship_CreatedB_rel</relationshipLabel>
        <relationshipName>rel_1724325739302_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325741277_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentRelationship_RelatedI_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ContentDocumentRelationship_RelatedI_rel</relationshipLabel>
        <relationshipName>rel_1724325741277_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724325746511_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContentDocumentRelationship_RelatedI_rel</label>
        <referenceTo>ssot__KnowledgeArticleVersion__dlm</referenceTo>
        <relationshipLabel>ContentDocumentRelationship_RelatedI_rel</relationshipLabel>
        <relationshipName>rel_1724325746511_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>